create business account

--- a/web/promocods-busnes.html
+++ b/web/promocods-busnes.html
@@ -208,9 +208,18 @@
           <span class="r6">
           </span>
         </div>
+        <div class="row-content">
+          <span class="r1"> fkdsl a dlksfj kdj fkjd klsj klfdj klfd sjkflj weoiuroi wj.xnvsnldk jkdsjfiewo r</span>
+          <span class="r2">321-312</span>
+          <span class="r3">12.12.2017</span>
+          <span class="r4">до 05.04.2015</span>
+          <span class="r5">13.4</span>
+          <span class="r6">
+          </span>
+        </div>
+        <div class="large-wide-button non-border"><p>Показать больше заказов</p></div>
       </div>
     </div>
-    <div class="large-wide-button non-border"><p>Показать больше заказов</p></div>
   </div>
 </div>
 
