added discount form/added discounts feed in post/ added full page of discount

--- a/web/catigory_discounts.html
+++ b/web/catigory_discounts.html
@@ -275,6 +275,110 @@
         <div class="ava">123</div>
       </div>
     </div>
+    <div class="card-block-discount">
+      <div class="block-discount-photo" style="background-image: url('testP.png')">
+        <div class="block-blackout-discount">
+          <div class="discount-block">
+            <div class="discount">50%</div>
+          </div>
+          <div class="go_to_view-block">
+            <div class="go_to_view">Посмотреть</div>
+          </div>
+          <div class="btn-like-block">
+            <div class="btn-like"></div>
+          </div>
+        </div>
+      </div>
+      <div class="block-discount-info">
+        <div class="discount-description">Скидка 50% на все меню кухни и напитки в пабе «Рыжий лис» Скидка 50% на все меню кухни и напитки в пабе «Рыжий ли</div>
+      </div>
+      <div class="block-discount-dopinfo">
+        <div class="time-left">Осталось 1дн., 3ч.</div>
+        <div class="distance-to-me">6.5км</div>
+      </div>
+      <div class="discount-footer">
+        <div class="promo-code-price">Цена 1,60 руб</div>
+        <div class="ava">123</div>
+      </div>
+    </div>
+    <div class="card-block-discount">
+      <div class="block-discount-photo" style="background-image: url('testP.png')">
+        <div class="block-blackout-discount">
+          <div class="discount-block">
+            <div class="discount">50%</div>
+          </div>
+          <div class="go_to_view-block">
+            <div class="go_to_view">Посмотреть</div>
+          </div>
+          <div class="btn-like-block">
+            <div class="btn-like"></div>
+          </div>
+        </div>
+      </div>
+      <div class="block-discount-info">
+        <div class="discount-description">Скидка 50% на все меню кухни и напитки в пабе «Рыжий лис» Скидка 50% на все меню кухни и напитки в пабе «Рыжий ли</div>
+      </div>
+      <div class="block-discount-dopinfo">
+        <div class="time-left">Осталось 1дн., 3ч.</div>
+        <div class="distance-to-me">6.5км</div>
+      </div>
+      <div class="discount-footer">
+        <div class="promo-code-price">Цена 1,60 руб</div>
+        <div class="ava">123</div>
+      </div>
+    </div>
+    <div class="card-block-discount">
+      <div class="block-discount-photo" style="background-image: url('testP.png')">
+        <div class="block-blackout-discount">
+          <div class="discount-block">
+            <div class="discount">50%</div>
+          </div>
+          <div class="go_to_view-block">
+            <div class="go_to_view">Посмотреть</div>
+          </div>
+          <div class="btn-like-block">
+            <div class="btn-like"></div>
+          </div>
+        </div>
+      </div>
+      <div class="block-discount-info">
+        <div class="discount-description">Скидка 50% на все меню кухни и напитки в пабе «Рыжий лис» Скидка 50% на все меню кухни и напитки в пабе «Рыжий ли</div>
+      </div>
+      <div class="block-discount-dopinfo">
+        <div class="time-left">Осталось 1дн., 3ч.</div>
+        <div class="distance-to-me">6.5км</div>
+      </div>
+      <div class="discount-footer">
+        <div class="promo-code-price">Цена 1,60 руб</div>
+        <div class="ava">123</div>
+      </div>
+    </div>
+    <div class="card-block-discount">
+      <div class="block-discount-photo" style="background-image: url('testP.png')">
+        <div class="block-blackout-discount">
+          <div class="discount-block">
+            <div class="discount">50%</div>
+          </div>
+          <div class="go_to_view-block">
+            <div class="go_to_view">Посмотреть</div>
+          </div>
+          <div class="btn-like-block">
+            <div class="btn-like"></div>
+          </div>
+        </div>
+      </div>
+      <div class="block-discount-info">
+        <div class="discount-description">Скидка 50% на все меню кухни и напитки в пабе «Рыжий лис» Скидка 50% на все меню кухни и напитки в пабе «Рыжий ли</div>
+      </div>
+      <div class="block-discount-dopinfo">
+        <div class="time-left">Осталось 1дн., 3ч.</div>
+        <div class="distance-to-me">6.5км</div>
+      </div>
+      <div class="discount-footer">
+        <div class="promo-code-price">Цена 1,60 руб</div>
+        <div class="ava">123</div>
+      </div>
+    </div>
   </div>
 </div>
 <div style="margin-bottom:30px;"></div>
